Feat/dashboard Created dashboard for administration of award system. (#14)
* Initial dashboard codes

* Make currency list, create currency, create account to work

* A little change in the DB connector for looking Account, now the search text will include the code

* moved from accore v1.0.1 to v1.0.3

* Complete the create journal functions

* Finished Load Transactions and some fix in the API

* Finishes the core function of the admin CMS

* Fixed class name prop

* Very small minor change
