# internal/router/router.go
@@ -1,7 +1,6 @@
 package router
 
 import (
-	"fmt"
 	"github.com/IDN-Media/awards/internal/accounting"
 	"github.com/IDN-Media/awards/internal/middlewares"
 	"github.com/IDN-Media/awards/static"
@@ -35,46 +34,55 @@ func InitRoutes(router *Router) {
 
 	// register middlewares
 	// r.Use(apmgorilla.Middleware()) // apmgorilla.Instrument(r.MuxRouter) // elastic apm: DISABLED
-	r.Use(middlewares.SetupContextMiddleware, middlewares.Logger, middlewares.HMACMiddleware) // your faithfull logger
+	r.Use(middlewares.CORSMiddleware, middlewares.SetupContextMiddleware, middlewares.Logger, middlewares.HMACMiddleware) // your faithfull logger
 
 	// health check endpoint. Not in a version path as it will seems to be a permanent endpoint (famous last words)
-	r.HandleFunc("/health", healthhttp.HandleHealthJSON(health.H)).Methods("GET")
-	r.HandleFunc("/devkey", middlewares.DevKey).Methods("PUT")
+	r.HandleFunc("/health", healthhttp.HandleHealthJSON(health.H)).Methods("GET", "OPTIONS")
+	r.HandleFunc("/devkey", middlewares.DevKey).Methods("PUT", "OPTIONS")
 
-	r.HandleFunc("/api/v1/accounts/{AccountNumber}", accounting.GetAccount).Methods("GET")
-	r.HandleFunc("/api/v1/accounts/{accountNumber}/draw", accounting.DrawAccount).Methods("GET")
-	r.HandleFunc("/api/v1/accounts/{AccountNumber}/transactions", accounting.ListTransactionByAccount).Methods("GET")
-	r.HandleFunc("/api/v1/accounts", accounting.FindAccount).Methods("GET")
-	r.HandleFunc("/api/v1/accounts", accounting.CreateAccount).Methods("POST")
+	r.HandleFunc("/api/v1/accounts/{AccountNumber}", accounting.GetAccount).Methods("GET", "OPTIONS")
+	r.HandleFunc("/api/v1/accounts/{accountNumber}/draw", accounting.DrawAccount).Methods("GET", "OPTIONS")
+	r.HandleFunc("/api/v1/accounts/{AccountNumber}/transactions", accounting.ListTransactionByAccount).Methods("GET", "OPTIONS")
+	r.HandleFunc("/api/v1/accounts", accounting.FindAccount).Methods("GET", "OPTIONS")
+	r.HandleFunc("/api/v1/accounts", accounting.CreateAccount).Methods("POST", "OPTIONS")
 
-	r.HandleFunc("/api/v1/journals", accounting.CreateJournal).Methods("POST")
-	r.HandleFunc("/api/v1/journals", accounting.ListJournal).Methods("GET")
-	r.HandleFunc("/api/v1/journals/reversal", accounting.CreateReversalJournal).Methods("POST")
-	r.HandleFunc("/api/v1/journals/{JournalID}", accounting.GetJournal).Methods("GET")
-	r.HandleFunc("/api/v1/journals/{JournalID}/draw", accounting.DrawJournal).Methods("GET")
+	r.HandleFunc("/api/v1/journals", accounting.CreateJournal).Methods("POST", "OPTIONS")
+	r.HandleFunc("/api/v1/journals", accounting.ListJournal).Methods("GET", "OPTIONS")
+	r.HandleFunc("/api/v1/journals/reversal", accounting.CreateReversalJournal).Methods("POST", "OPTIONS")
+	r.HandleFunc("/api/v1/journals/{JournalID}", accounting.GetJournal).Methods("GET", "OPTIONS")
+	r.HandleFunc("/api/v1/journals/{JournalID}/draw", accounting.DrawJournal).Methods("GET", "OPTIONS")
 
-	r.HandleFunc("/api/v1/transactions/{TransactionID}", accounting.GetTransaction).Methods("GET")
+	r.HandleFunc("/api/v1/transactions/{TransactionID}", accounting.GetTransaction).Methods("GET", "OPTIONS")
 
-	r.HandleFunc("/api/v1/exchange/denom", accounting.GetCommonDenominator).Methods("GET")
-	r.HandleFunc("/api/v1/exchange/denom", accounting.SetCommonDenominator).Methods("PUT")
+	r.HandleFunc("/api/v1/exchange/denom", accounting.GetCommonDenominator).Methods("GET", "OPTIONS")
+	r.HandleFunc("/api/v1/exchange/denom", accounting.SetCommonDenominator).Methods("PUT", "OPTIONS")
 
-	r.HandleFunc("/api/v1/currencies", accounting.ListCurrencies).Methods("GET")
-	r.HandleFunc("/api/v1/currencies/{code}", accounting.GetCurrency).Methods("GET")
-	r.HandleFunc("/api/v1/currencies/{code}", accounting.SetCurrency).Methods("PUT")
+	r.HandleFunc("/api/v1/currencies", accounting.ListCurrencies).Methods("GET", "OPTIONS")
+	r.HandleFunc("/api/v1/currencies/{code}", accounting.GetCurrency).Methods("GET", "OPTIONS")
+	r.HandleFunc("/api/v1/currencies/{code}", accounting.SetCurrency).Methods("PUT", "OPTIONS")
 
-	r.HandleFunc("/api/v1/exchange/{codefrom}/{codeto}", accounting.CalculateExchangeRate).Methods("GET")
-	r.HandleFunc("/api/v1/exchange/{codefrom}/{codeto}/{amount}", accounting.CalculateExchange).Methods("GET")
-
-	fmt.Println("----------------------------------------------------")
+	r.HandleFunc("/api/v1/exchange/{codefrom}/{codeto}", accounting.CalculateExchangeRate).Methods("GET", "OPTIONS")
+	r.HandleFunc("/api/v1/exchange/{codefrom}/{codeto}/{amount}", accounting.CalculateExchange).Methods("GET", "OPTIONS")
 
 	r.HandleFunc("/docs", StaticServer("")).Methods("GET")
 	r.HandleFunc("/docs/", StaticServer("")).Methods("GET")
+
+	r.HandleFunc("/dashboard", StaticServer("")).Methods("GET")
+	r.HandleFunc("/dashboard/", StaticServer("")).Methods("GET")
 
 	tree := static.GetPathTree("api")
 	for _, t := range tree {
 		pth := strings.ReplaceAll(t, "api/swagger", "/docs")
 		if pth[:5] != "[DIR]" {
 			r.HandleFunc(pth, StaticServer(t)).Methods("GET")
+		}
+	}
+
+	tree = static.GetPathTree("dashboard")
+	for _, t := range tree {
+		pth := strings.ReplaceAll(t, "dashboard", "/dashboard")
+		if pth[:5] != "[DIR]" {
+			r.HandleFunc("/"+t, StaticServer(t)).Methods("GET")
 		}
 	}
 
@@ -93,12 +101,22 @@ func StaticServer(path string) func(w http.ResponseWriter, r *http.Request) {
 			w.Header().Set("Location", "/docs/index.html")
 			w.WriteHeader(http.StatusMovedPermanently)
 			return
+		} else if r.URL.Path == "/dashboard" || r.URL.Path == "/dashboard/" {
+			w.Header().Set("Location", "/dashboard/index.html")
+			w.WriteHeader(http.StatusMovedPermanently)
+			return
 		} else if strings.HasSuffix(r.URL.Path, "/") {
 			w.Header().Set("Location", r.URL.Path+"index.html")
 			w.WriteHeader(http.StatusMovedPermanently)
 			return
 		}
-		filePath := strings.ReplaceAll(r.URL.Path, "/docs/", "api/swagger/")
+		var filePath string
+		if strings.Contains(r.URL.Path, "/docs/") {
+			filePath = strings.ReplaceAll(r.URL.Path, "/docs/", "api/swagger/")
+		}
+		if strings.Contains(r.URL.Path, "/dashboard/") {
+			filePath = strings.ReplaceAll(r.URL.Path, "/dashboard/", "dashboard/")
+		}
 		dirFilePath := "[DIR]" + filePath
 
 		if path == dirFilePath {
